6695288: runThese tests expr30303 and drem00301m1 fail when compiled code executes without deopt

Rework Value method for ModD and ModF, to DTRT for infinities

Reviewed-by: sgoldman, kvn, rasbold